# ptpimg-uploader

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  README.rst  ptpimg-uploader.py  ptpimg_uploader.py  pyproject.toml  setup.py
.github/workflows/: build.yml  pythonpublish.yml
tests/: test_ptpimg_uploader.py
